Adapted microservices with Webflux to Junit 5